connect/tests/macros/quint_run/fail/invalid_num.stderr
error: invalid digit found in string
  --> tests/macros/quint_run/fail/invalid_num.rs:11:46
   |
11 | #[quint_run(spec = "spec.qnt", max_samples = -666)]
   |                                              ^

error: expected integer literal
  --> tests/macros/quint_run/fail/invalid_num.rs:16:46
   |
16 | #[quint_run(spec = "spec.qnt", max_samples = "666")]
   |                                              ^^^^^
